--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -432,17 +432,19 @@ html {
     font-size: 0.9rem;
     color: #ccc;
 }
- 
+
 .stat-number {
     font-size: 5em;
     font-weight: bold;
     color: #ffd700;
     /* Yellow */
 }
-.stat-txt{
+
+.stat-txt {
     font-size: 0.5em;
     font-weight: lighter;
 }
+
 .stat-label {
     font-size: 18px;
     text-transform: uppercase;
@@ -451,4 +453,64 @@ html {
 
 .divider {
     border-left: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.services-section {
+    background-color: #001bc5;
+    padding: 60px 20px;
+    color: white;
+    text-align: center;
+}
+
+.services-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.services-grid {
+    display: grid;
+    gap: 40px;
+    margin: auto;
+}
+
+.service-card {
+    position: relative;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.service-image {
+    width: 100%;
+    display: block;
+    border-radius: 18px;
+}
+
+.service-icon {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    width: 30px;
+    height: auto;
+}
+
+.service-content {
+    padding: 16px;
+    background-color: #001bc5;
+    text-align: left;
+}
+
+.service-content h3 {
+    margin-bottom: 8px;
+    font-size: 2.2rem;
+    font-weight: 600;
+}
+
+.service-content h3 span{
+    color: #E1647C;
+}
+
+.service-content p {
+    margin: 0;
+    font-size: 0.95rem;
 }
