--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,3 +673,68 @@ html {
         width: 60px;
     }
 }
+
+
+.testimonials-section {
+    background-color: #001bc5;
+    padding: 60px 20px;
+    text-align: center;
+}
+
+.testimonial-card {
+    background-image: url('/assets/images/testimonial-img/card-bg.svg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    width: 284px;
+    padding: 40px 25px 70px;
+    margin: auto;
+    border-radius: 12px;
+    box-shadow: 0 6px 24px rgba(0, 0, 0, 0.15);
+    z-index: 1;
+}
+
+.border-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    pointer-events: none;
+}
+
+.border-overlay img {
+    width: 89%;
+    height: 90%;
+    object-fit: contain;
+    position: absolute;
+    top: 5%;
+    left: 6%;
+}
+
+.testimonial-content {
+    position: relative;
+    z-index: 2;
+}
+
+.avatar-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    background-color: #eee;
+}
+
+.ratings i {
+    font-size: 1.1rem;
+}
+
+.stamp-img {
+    position: absolute;
+    bottom: -25px;
+    right: -15px;
+    width: 100px;
+    z-index: 3;
+}
