Add testimonial section with Swiper integration and responsive styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,6 +679,7 @@ html {
     background-color: #001bc5;
     padding: 60px 20px;
     text-align: center;
+    height: 100vh;
 }
 
 .testimonial-card {
@@ -717,6 +718,7 @@ html {
 .testimonial-content {
     position: relative;
     z-index: 2;
+    font-family: 'Inter', sans-serif;
 }
 
 .avatar-img {
@@ -738,3 +740,45 @@ html {
     width: 100px;
     z-index: 3;
 }
+
+.testimonial-swiper {
+    overflow: visible !important;
+    padding: 0 30px;
+    /* max-width: 1000px;
+    overflow: hidden; */
+}
+
+.swiper-slide {
+    width: 284px !important;
+}
+
+.testimonial-swiper .swiper-slide {
+    transition: transform 0.3s ease, z-index 0.3s ease;
+    transform: translateY(60px) scale(0.85);
+    z-index: 1;
+}
+
+.testimonial-swiper .swiper-slide.middle {
+    transform: translateY(0px) scale(1);
+    z-index: 5;
+}
+
+.testimonial-swiper .swiper-slide.near {
+    transform: translateY(60px) scale(0.95);
+    z-index: 4;
+}
+
+.testimonial-swiper .swiper-slide.far {
+    transform: translateY(150px) scale(1);
+    z-index: 3;
+}
+.testimonial-swiper .swiper-slide.more-far {
+    transform: translateY(230px) scale(1);
+    z-index: 3;
+}
+
+/* .testimonial-swiper .swiper-slide.far .testimonial-card{
+    transform: translateY(60px) scale(0.9);
+    z-index: 3;
+    width: 256px;
+} */
