--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,7 +540,7 @@ html {
     transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     text-align: center;
     z-index: 2;
 }
@@ -657,6 +657,11 @@ html {
     left: 68%;
 }
 
+.circle-center h2 {
+    font-size: 2em;
+    font-weight: 600;
+}
+
 @media (max-width: 768px) {
     .circle-wrapper {
         width: 90vw;
@@ -677,7 +682,7 @@ html {
 
 .testimonials-section {
     background-color: #001bc5;
-    padding: 60px 20px;
+    padding: 100px 20px 800px;
     text-align: center;
     height: 100vh;
 }
@@ -856,7 +861,7 @@ html {
     padding: 0;
     margin: 0;
 }
- 
+
 
 .footer-links li a {
     color: white;
@@ -900,7 +905,7 @@ html {
     color: white;
     text-decoration: none;
     font-weight: 600;
-    font-size: 1rem; 
+    font-size: 1rem;
     transition: color 0.3s ease;
     text-transform: uppercase;
     letter-spacing: 1px;
