--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,10 +801,7 @@ html {
     left: 0;
     right: 0;
     bottom: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.1) 0%,
-            rgba(0, 0, 0, 0.4) 30%,
-            rgba(0, 0, 0, 0.7) 70%,
-            rgba(0, 0, 0, 0.9) 100%);
+    background: linear-gradient(rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0.4) 30%, rgb(0 0 0 / 79%) 70%, rgba(0, 0, 0, 0.9) 100%);
     z-index: 1;
 }
 
@@ -906,7 +903,7 @@ html {
     text-decoration: none;
     font-weight: 500;
     font-size: 15px;
-    transition: color 0.3s ease; 
+    transition: color 0.3s ease;
     letter-spacing: 1px;
 }
 
