--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,13 +120,13 @@ body {
 }
 
 .hero-image-container {
-    position: relative; 
+    position: relative;
     z-index: 2;
 }
 
 .hero-main-image {
     width: 100%;
-    height: auto; 
+    height: auto;
     position: relative;
     z-index: 2;
     bottom: 30px;
@@ -136,7 +136,7 @@ body {
 .language-slider {
     position: relative;
     display: inline-block;
-    height: 1.2em; 
+    height: 1.2em;
     vertical-align: top;
     width: auto;
     min-width: 350px;
@@ -152,9 +152,39 @@ body {
     transform: translateY(100%);
     opacity: 0;
     animation: slideUpText 14s infinite;
+    transition: transform 0.8s ease, opacity 0.8s ease;
+    z-index: 1;
 }
 
-.language-text:nth-child(1) {
+
+/* Forward: Bottom to Top */
+.language-text.slide-in-up {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: transform 0.8s ease, opacity 0.8s ease;
+  z-index: 2;
+}
+
+.language-text.slide-out-up {
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: transform 0.8s ease, opacity 0.8s ease;
+}
+
+/* Reverse: Top to Bottom */
+.language-text.slide-in-down {
+  opacity: 1;
+  transform: translateY(0%);
+  transition: transform 0.4s ease, opacity 0.4s ease;
+  z-index: 2;
+}
+
+.language-text.slide-out-down {
+  opacity: 0;
+  transform: translateY(100%);
+  transition: transform 0.4s ease, opacity 0.4s ease;
+}
+/* .language-text:nth-child(1) {
     animation-delay: 0s;
 }
 
@@ -207,7 +237,7 @@ body {
         transform: translateY(-100%);
         opacity: 0;
     }
-}
+} */
 
 /* Responsive Design */
 @media (max-width: 768px) {
