--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,7 @@ body {
     min-height: 100vh;
     position: relative;
     overflow: hidden;
+    padding-bottom: 100px;
 }
 
 .hero-section::before {
@@ -138,7 +139,6 @@ body {
     display: inline-block;
     height: 1.2em;
     vertical-align: top;
-    width: auto;
     min-width: 350px;
 }
 
@@ -149,41 +149,52 @@ body {
     width: 100%;
     text-align: right;
     white-space: nowrap;
-    transform: translateY(100%);
     opacity: 0;
-    animation: slideUpText 14s infinite;
+    transform: translateY(100%);
     transition: transform 0.8s ease, opacity 0.8s ease;
     z-index: 1;
 }
 
-
-/* Forward: Bottom to Top */
 .language-text.slide-in-up {
-  opacity: 1;
-  transform: translateY(0%);
-  transition: transform 0.8s ease, opacity 0.8s ease;
-  z-index: 2;
+    opacity: 1;
+    transform: translateY(0%);
+    z-index: 2;
 }
 
 .language-text.slide-out-up {
-  opacity: 0;
-  transform: translateY(-100%);
-  transition: transform 0.8s ease, opacity 0.8s ease;
+    opacity: 0;
+    transform: translateY(-100%);
+}
+@keyframes bounceUpDown {
+  0% {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  20% {
+    transform: translateY(0%);
+    opacity: 1;
+  }
+  40% {
+    transform: translateY(-10%);
+  }
+  60% {
+    transform: translateY(0%);
+  }
+  80% {
+    transform: translateY(-5%);
+  }
+  100% {
+    transform: none; /* Fixes the jump */
+  }
 }
 
-/* Reverse: Top to Bottom */
-.language-text.slide-in-down {
-  opacity: 1;
-  transform: translateY(0%);
-  transition: transform 0.4s ease, opacity 0.4s ease;
+.language-text.bounce-tr {
+  animation: bounceUpDown 1s ease forwards;
+  opacity: 1 !important;
   z-index: 2;
 }
 
-.language-text.slide-out-down {
-  opacity: 0;
-  transform: translateY(100%);
-  transition: transform 0.4s ease, opacity 0.4s ease;
-}
+
 /* .language-text:nth-child(1) {
     animation-delay: 0s;
 }
