--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -11,6 +11,7 @@
         min-width: 100px;
         height: 1.8em;
         font-size: 2.1rem;
+        margin-right: 10px;
         text-align: center;
     }
 
