--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,22 +20,21 @@
     .navbar .nav-link {
         padding: 0.5rem 1rem;
         font-weight: 500;
-    }
-
+    } 
     .navbar .nav-link.active,
     .navbar .nav-link:hover {
         color: #ffc107 !important;
     }
 
     .btn-contact {
-        padding: 0.5rem 1.2rem;
-        border-radius: 30px;
+        padding: 0.5rem 1.2rem; 
         font-weight: 600;
+        background-color: #ea5d49;
     }
 
     .offcanvas .nav-link {
         padding: 0.75rem 1rem;
-        font-size: 1.1rem;
+        font-size: 1.3rem;
     }
 
     .offcanvas .nav-link:hover {
