--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,16 +20,21 @@
     .navbar .nav-link {
         padding: 0.5rem 1rem;
         font-weight: 500;
-    } 
+    }
+
     .navbar .nav-link.active,
     .navbar .nav-link:hover {
         color: #ffc107 !important;
     }
 
     .btn-contact {
-        padding: 0.5rem 1.2rem; 
+        padding: 0.5rem 1.2rem;
         font-weight: 600;
         background-color: #ea5d49;
+    }
+
+    .btn-hear-from-us {
+        display: none;
     }
 
     .offcanvas .nav-link {
@@ -69,12 +74,13 @@
         position: relative;
         z-index: 2;
         object-fit: cover;
-        bottom: -50px;
+        bottom: 0px;
         overflow: hidden;
     }
 
     .hero-section {
-        min-height: 50vh;
+        min-height: 40vh;
+        padding-bottom: 35px;
     }
 
     .full-bg-section {
