--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,14 +114,14 @@ body {
 
 .hero-image-container {
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
 }
 
 .hero-main-image {
     width: 100%;
     height: auto;
     position: relative;
-    z-index: 2;
+    /* z-index: 2; */
     bottom: 30px;
 }
 
