update UI and compress images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1113,10 +1113,10 @@ body {
     border: none;
     cursor: pointer;
 }
-
+/* 
 .modal-right button:hover {
     background: #0056b3;
-}
+} */
 
 /* Close button */
 .close {
