--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -313,6 +313,10 @@
         margin-bottom: 0px;
     }
 
+    .testimonial-content h4 {
+        font-size: 1.1em;
+    }
+
     .card-img {
         display: none;
     }
