--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -92,7 +92,8 @@
     }
 
     .star-icon {
-        width: 121px;
+        width: 111px;
+        margin-left: 20px;
     }
 
     .global-voice-info {
