--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,10 +36,10 @@ body {
     position: relative;
     z-index: 1000;
 }
-
+/* 
 .navbar-brand img {
     width: 150px;
-}
+} */
 
 .glassy-nav {
     background: rgba(255, 255, 255, 0.1);
