--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -349,4 +349,30 @@
         font-size: 13px !important;
         margin-bottom: 10px;
     }
+
+    .btn-service {
+        background-color: #ea5D49;
+        text-decoration: none;
+        color: white;
+        position: absolute;
+        border-radius: 0px;
+        font-size: 10px;
+        padding: 2px 15px;
+        z-index: 999;
+        right: 10%;
+        bottom: 10%;
+    }
+
+    .btn-service:hover {
+        background-color: #ea5D49;
+        text-decoration: none;
+        color: white;
+        position: absolute;
+        font-size: 10px;
+        border-radius: 0px;
+        padding: 2px 15px;
+        z-index: 999;
+        right: 10%;
+        bottom: 10%;
+    }
 }
