--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -100,6 +100,7 @@
     .global-voice-info {
         flex-direction: column;
         align-items: start;
+        margin-top: 4em;
     }
 
     .global-voice-section h3 {
@@ -107,7 +108,8 @@
     }
 
     .global-voice-section p {
-        font-size: 1rem;
+        font-size: 1.2rem;
+        text-align: justify;
     }
 
     .stat-number {
