--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,7 +442,7 @@ body {
 
 .services-section {
     /* background-color: #001bc5; */
-    padding: 60px 20px;
+    padding: 60px 20px 0px 20px;
     color: white;
     text-align: center;
 }
@@ -485,8 +485,8 @@ body {
 }
 
 .service-content h3 {
-    margin-bottom: 8px;
-    font-size: 2.2rem;
+    margin-bottom: 15px;
+    font-size: 3rem;
     font-weight: 600;
 }
 
@@ -496,12 +496,12 @@ body {
 
 .service-content p {
     margin: 0;
-    font-size: 0.95rem;
+    font-size: 1.4em;
 }
 
 .clients-circle-section {
     /* background-color: #0011ff; */
-    padding: 100px 0;
+    padding: 0px 0 100px 0;
     position: relative;
 }
 
