--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -20,6 +20,7 @@
     .navbar .nav-link {
         padding: 0.5rem 1rem;
         font-weight: 500;
+        line-height: 45px;
     }
 
     .navbar .nav-link.active,
