--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,7 +333,7 @@ body {
 .global-voice-section {
     /* background-color: #001bc5; */
     color: #fff;
-    padding: 60px 20px 80px;
+    padding: 100px 0px 50px !important;
 }
 
 .container {
