--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -97,6 +97,11 @@
         margin-left: 4px;
     }
 
+    .global-voice-section { 
+        color: #fff;
+        padding: 50px 0px 50px !important;
+    }
+
     .stats-section {
         margin-top: 4em !important;
     }
