--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -90,6 +90,8 @@
 
     .global-voice-section h1 {
         font-size: 2rem;
+        margin-top: 1px !important;
+        line-height: 1.3;
     }
 
     .star-icon {
@@ -97,7 +99,7 @@
         margin-left: 4px;
     }
 
-    .global-voice-section { 
+    .global-voice-section {
         color: #fff;
         padding: 50px 0px 50px !important;
     }
@@ -119,6 +121,7 @@
     .global-voice-section p {
         font-size: 1.2rem;
         text-align: justify;
+        line-height: 1.6;
     }
 
     .stat-number {
